--- a/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
+++ b/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
@@ -13,10 +13,7 @@
         </span>
     </div>
 </nav>
-<jhi-code-editor-container
-    *ngIf="!loadingParticipation && !participationCouldNotBeFetched"
-    [editable]="!repositoryIsLocked"
->
+<jhi-code-editor-container *ngIf="!loadingParticipation && !participationCouldNotBeFetched" [editable]="!repositoryIsLocked" [participation]="participation">
     <span editorTitle>{{ exercise.title }}</span>
     <ng-template editorNavbar>
         <jhi-code-editor-repository-is-locked *ngIf="repositoryIsLocked" class="mr-3"></jhi-code-editor-repository-is-locked>
@@ -37,10 +34,6 @@
             [btnSize]="ButtonSize.MEDIUM"
         ></jhi-programming-exercise-student-trigger-build-button>
         <jhi-exercise-hint-student *ngIf="exercise" [exerciseId]="exercise.id" [exerciseHints]="exercise.exerciseHints" class="mr-2"></jhi-exercise-hint-student>
-    </ng-template>s
-    <jhi-code-editor-instructions
-        editorSidebar
-        [participation]="participation"
-        [exercise]="exercise"
-    ></jhi-code-editor-instructions>
+    </ng-template>
+    <jhi-code-editor-instructions editorSidebar [participation]="participation" [exercise]="exercise"></jhi-code-editor-instructions>
 </jhi-code-editor-container>
