--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -56,21 +56,27 @@
                         <th jhiTranslate="artemisApp.examScores.noExerciseParticipantsColumn"># Exercise Participants (Filtered/Total)</th>
                         <th jhiTranslate="artemisApp.examScores.averagePointsGroupColumn">Average Points (Exercise Group)</th>
                         <th jhiTranslate="artemisApp.examScores.maximumPointsColumn">Maximum Points</th>
-                        <th jhiTranslate="artemisApp.examScores.noExerciseGroupParticipantsFilteredColumn"># Exercise Group Participants Filtered</th>
+                        <th jhiTranslate="artemisApp.examScores.noExerciseGroupParticipantsFilteredColumn"># Exercise Group Participants (Filtered/Total)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <ng-container *ngFor="let exerciseGroupResult of aggregatedExerciseGroupResults">
                         <tr *ngFor="let exerciseResult of exerciseGroupResult.exerciseResults; first as isFirst">
-                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">{{ exerciseGroupResult.title }}</td>
+                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                                {{ exerciseGroupResult.title }}
+                            </td>
                             <td>{{ exerciseResult.title }}</td>
                             <td>{{ exerciseResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseResult.averagePoints, 2, 2) : '-' }}</td>
                             <td>{{ exerciseResult.noOfParticipantsWithFilter }}/{{ exerciseResult.totalParticipants }}</td>
                             <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
                                 {{ exerciseGroupResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePoints, 2, 2) : '-' }}
                             </td>
-                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">{{ toLocaleString(exerciseGroupResult.maxPoints) }}</td>
-                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">{{ exerciseGroupResult.noOfParticipantsWithFilter }}</td>
+                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                                {{ toLocaleString(exerciseGroupResult.maxPoints) }}
+                            </td>
+                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                                {{ exerciseGroupResult.noOfParticipantsWithFilter }}/{{ exerciseGroupResult.totalParticipants }}
+                            </td>
                         </tr>
                     </ng-container>
                 </tbody>
