--- a/src/main/webapp/app/exercises/programming/shared/code-editor/instructions/code-editor-instructions.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/instructions/code-editor-instructions.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!noInstructionsAvailable" id="cardInstructions" class="instructions-wrapper card border border-lightgrey">
+<div id="cardInstructions" class="instructions-wrapper card border border-lightgrey">
     <div class="card-header d-flex justify-content-center text-white bg-primary" (click)="toggleEditorCollapse($event)">
         <h3 class="card-title">
             <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
@@ -6,6 +6,12 @@
         </h3>
         <fa-icon class="ml-auto" [icon]="'chevron-right'"></fa-icon>
     </div>
+    <ng-content></ng-content>
+    <!-- Required for resizing; don't remove empty span -->
+    <div class="rg-left"><span></span></div>
+</div>
+
+<!--
     <jhi-programming-exercise-instructions
         *ngIf="!editable; else markdownEditorInstructions"
         (onNoInstructionsAvailable)="onNoInstructionsAvailable()"
@@ -26,6 +32,5 @@
         >
         </jhi-programming-exercise-editable-instructions>
     </ng-template>
-    <!-- Required for resizing; don't remove empty span -->
-    <div class="rg-left"><span></span></div>
-</div>
+
+-->
