make grid-resize event explicit (todo: remove resize service)

--- a/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
@@ -1,4 +1,4 @@
-<jhi-code-editor-grid #grid>
+<jhi-code-editor-grid #grid (onResize)="onGridResize($event)">
     <ng-content select="[editorTitle]" editorTitle></ng-content>
     <div class="d-flex align-items-center ml-auto" editorNavbar>
         <ng-content select="[editorToolbar]"></ng-content>
