--- a/src/main/webapp/app/exam/participate/exercises/programming/code-editor/exam-code-editor-student-container.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/programming/code-editor/exam-code-editor-student-container.component.html
@@ -3,6 +3,7 @@
     [participation]="participation"
     [showEditorInstructions]="showEditorInstructions"
     (onCommitStateChange)="onCommitStateChange($event)"
+    (onFileChanged)="onFileChanged()"
 >
     <div editorTitle>
         <span>{{ exercise?.title }}</span>
