Add max points for exercise

--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -47,53 +47,54 @@
             </div>
 
             <!-- Exercise Statistics Table -->
-            <div class="table-responsive">
-                <table class="table table-bordered table-sm">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>
-                                {{ 'artemisApp.examScores.titleExerciseGroupColumn' | translate }}
-                            </th>
-                            <th>
-                                {{ 'artemisApp.examScores.participantsColumn' | translate }}
-                                <jhi-help-icon placement="right" text="artemisApp.examScores.participantsExerciseGroupTooltip"></jhi-help-icon>
-                            </th>
-                            <th>
-                                {{ 'artemisApp.examScores.averagePointsColumn' | translate }}
-                                <jhi-help-icon placement="right" text="artemisApp.examScores.averageExerciseGroupTooltip"></jhi-help-icon>
-                            </th>
-                            <th>
-                                {{ 'artemisApp.examScores.titleExerciseColumn' | translate }}
-                            </th>
-                            <th>
-                                {{ 'artemisApp.examScores.participantsColumn' | translate }}
-                                <jhi-help-icon placement="right" text="artemisApp.examScores.participantsExerciseTooltip"></jhi-help-icon>
-                            </th>
-                            <th>
-                                {{ 'artemisApp.examScores.averagePointsColumn' | translate }}
-                                <jhi-help-icon placement="right" text="artemisApp.examScores.averageExerciseTooltip"></jhi-help-icon>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody *ngFor="let exerciseGroupResult of aggregatedExerciseGroupResults">
-                        <tr *ngFor="let exerciseResult of exerciseGroupResult.exerciseResults; first as isFirst">
-                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
-                                {{ exerciseGroupResult.title }}
-                            </td>
-                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
-                                {{ exerciseGroupResult.noOfParticipantsWithFilter }}/{{ exerciseGroupResult.totalParticipants }}
-                            </td>
-                            <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
-                                {{ exerciseGroupResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePoints, 2, 2) : '-' }} /
-                                {{ toLocaleString(exerciseGroupResult.maxPoints) }}
-                            </td>
-                            <td>{{ exerciseResult.title }}</td>
-                            <td>{{ exerciseResult.noOfParticipantsWithFilter }} / {{ exerciseResult.totalParticipants }}</td>
-                            <td>{{ exerciseResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseResult.averagePoints, 2, 2) : '-' }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+            <table class="table table-bordered table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>
+                            {{ 'artemisApp.examScores.titleExerciseGroupColumn' | translate }}
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.participantsColumn' | translate }}
+                            <jhi-help-icon placement="right" text="artemisApp.examScores.participantsExerciseGroupTooltip"></jhi-help-icon>
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.averagePointsColumn' | translate }}
+                            <jhi-help-icon placement="right" text="artemisApp.examScores.averageExerciseGroupTooltip"></jhi-help-icon>
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.titleExerciseColumn' | translate }}
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.participantsColumn' | translate }}
+                            <jhi-help-icon placement="right" text="artemisApp.examScores.participantsExerciseTooltip"></jhi-help-icon>
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.averagePointsColumn' | translate }}
+                            <jhi-help-icon placement="right" text="artemisApp.examScores.averageExerciseTooltip"></jhi-help-icon>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody *ngFor="let exerciseGroupResult of aggregatedExerciseGroupResults">
+                    <tr *ngFor="let exerciseResult of exerciseGroupResult.exerciseResults; first as isFirst">
+                        <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                            {{ exerciseGroupResult.title }}
+                        </td>
+                        <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                            {{ exerciseGroupResult.noOfParticipantsWithFilter }} / {{ exerciseGroupResult.totalParticipants }}
+                        </td>
+                        <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                            {{ exerciseGroupResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePoints, 2, 2) : '-' }} /
+                            {{ toLocaleString(exerciseGroupResult.maxPoints) }}
+                        </td>
+                        <td>{{ exerciseResult.title }}</td>
+                        <td>{{ exerciseResult.noOfParticipantsWithFilter }} / {{ exerciseResult.totalParticipants }}</td>
+                        <td>
+                            {{ exerciseResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseResult.averagePoints, 2, 2) : '-' }} /
+                            {{ toLocaleString(exerciseResult.maxPoints) }}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
 
         <!-- Student Result Table -->
