Add hover effect for exercise statistics table

--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -47,7 +47,7 @@
             </div>
 
             <!-- Exercise Statistics Table -->
-            <table class="table table-bordered table-sm">
+            <table class="table table-bordered table-sm body-hover">
                 <thead class="thead-dark">
                     <tr>
                         <th>
