--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.scss
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.scss
@@ -1,7 +1,7 @@
-.body-hover {
+.body-striped {
     tbody {
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.075);
+        &:nth-child(even) {
+            background-color: rgba(0, 0, 0, 0.05);
         }
     }
 }
